# MinVR

./: .gitignore
plugins/FREEGLUT/src/: VRFreeGLUTInputDevice.cpp
plugins/GLFW/src/: VRGLFWInputDevice.cpp
plugins/VRPN/src/: VRVRPNAnalogDevice.cpp  VRVRPNButtonDevice.cpp  VRVRPNTrackerDevice.cpp
src/: CMakeLists.txt
src/api/impl/: VRApp.cpp
src/input/: VRFakeTrackerDevice.cpp
src/net/: VRNetClient.cpp  VRNetClient.h  VRNetInterface.h  VRNetServer.cpp  VRNetServer.h
tests-batch/: CMakeLists.txt
tests-batch/network/: CMakeLists.txt  launchclient.cpp  nettest.cpp  networktest.cpp  oldCMake.txt  progress.md  tc.cpp  testclient.cpp  testnet.cpp  testserver.cpp
